fixed issue with form fields extending outside form on mobile

--- a/main.css
+++ b/main.css
@@ -569,18 +569,10 @@ body.is-article-visible #header {
 					width: calc(50% - 0.75rem);
 				}
 
-				form > .fields > .field.third {
-					width: calc(100%/3 - 0.5rem);
-				}
-
-				form > .fields > .field.quarter {
-					width: calc(25% - 0.375rem);
-				}
-
 		@media screen and (max-width: 480px) {
 
 			form > .fields {
-				width: calc(100% + 3rem);
+				width: calc(100% - 3rem);
 				margin: -1.5rem 0 2rem -1.5rem;
 			}
 
